Initial HTML and CSS coded

--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
 
+
   <header>
     <div class="header-content-wrapper">
       <div class="blue-box">
         <h1>Maggie McDonald</h1>
 
         <div class="intro-flex-container">
-          <div>
+          <div class="figure">
             <figure>
               <a href="#"><img src="img\profile-pic.png" alt="maggie"></a>
             </figure>
@@ -67,10 +68,12 @@
 
       </div>
 
+  </header>
 
+  <aside>
+    <div class="blue-skills-box">
       <h2>Skills:</h2>
-
-      <div class="flex-container">
+      <div class="skills-flex-container">
         <div>1</div>
         <div>2</div>
         <div>3</div>
@@ -78,52 +81,56 @@
         <div>5</div>
       </div>
     </div>
-
-  </header>
+    </div>
+  </aside>
 
   <!--Project Section-->
   <main>
-    <div class="project-1">
-      <h2>Project: Guess The Word Game</h2>
-      <div class="live-version">
-        <!--this is where I would like to place a live version of the repo-->
+    <div class="project-flex-container">
+      <div class="project-container">
+        <h2>Project: Guess The Word Game</h2>
+        <div class="live-version">
+          <!--this is where I would like to place a live version of the repo-->
+        </div>
+        <div class="project-info">
+          <p class="description"> An interactive Vanilla JavaScript game where the player must guess the word one letter
+            at a time with a total of 8 guesses.</p>
+          <p class="skills"><em>Skills: JS, Responsive Design, DOM Manipulation, Loops, APIs</em></p>
+          <button onclick=`window.location.href="https://maggie-mcdonald.github.io/guess-the-word/" ;`>Live
+            Site</button>
+          <button>Github Repo</button> <!--would like to use github icon-->
+        </div>
       </div>
-      <div class="project-info">
-        <p class="description"> An interactive Vanilla JavaScript game where the player must guess the word one letter
-          at a time with a total of 8 guesses.</p>
-        <p class="skills"><em>Skills: JS, Responsive Design, DOM Manipulation, Loops, APIs</em></p>
-        <button onclick=`window.location.href="https://maggie-mcdonald.github.io/guess-the-word/" ;`>Live Site</button>
-        <button>Github Repo</button> <!--would like to use github icon-->
-      </div>
-    </div>
 
-    <div class="project-2">
-      <h2>Project: Super Sticky Notes</h2>
-      <div class="live-version">
-        <!--this is where I would like to place a live version of the repo-->
+      <div class="project-container">
+        <h2>Project: Super Sticky Notes</h2>
+        <div class="live-version">
+          <!--this is where I would like to place a live version of the repo-->
+        </div>
+        <div class="project-info">
+          <p class="description"> A React app that allows for creation, deletion, editing and searching of sticky notes
+            that are saved to local storage.</p>
+          <p class="skills"><em>Skills: React.JS, JSX, CSS3, Lifecycle Methods</em></p>
+          <button>Live Site</button>
+          <button>Github Repo</button> <!--would like to use github icon-->
+        </div>
       </div>
-      <div class="project-info">
-        <p class="description"> A React app that allows for creation, deletion, editing and searching of sticky notes
-          that are saved to local storage.</p>
-        <p class="skills"><em>Skills: React.JS, JSX, CSS3, Lifecycle Methods</em></p>
-        <button>Live Site</button>
-        <button>Github Repo</button> <!--would like to use github icon-->
-      </div>
-    </div>
 
+
+      <div class="project-container">
+        <h2>Project: Github Repo Gallery</h2>
+        <div class="live-version">
+          <!--this is where I would like to place a live version of the repo-->
+        </div>
+        <div class="project-info">
+          <p class="description">A responsive API gallery of my current repos on Github. Repos are easy to find with an
+            eliminating search feature and easy navigation with multiple buttons.</p>
+          <p class="skills"><em>Skills: JS, APIs, Dom Manipulation, Loops</em></p>
+          <button>Live Site</button>
+          <button>Github Repo</button> <!--would like to use github icon-->
+        </div>
+      </div>
     </div>
-    <div class="project-3">
-      <h2>Project: Github Repo Gallery</h2>
-      <div class="live-version">
-        <!--this is where I would like to place a live version of the repo-->
-      </div>
-      <div class="project-info">
-        <p class="description">A responsive API gallery of my current repos on Github. Repos are easy to find with an
-          eliminating search feature and easy navigation with multiple buttons.</p>
-        <p class="skills"><em>Skills: JS, APIs, Dom Manipulation, Loops</em></p>
-        <button>Live Site</button>
-        <button>Github Repo</button> <!--would like to use github icon-->
-      </div>
     </div>
 
     <section class="about-me">
