Further styling added

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <div>
-        <h2>Hi! I'm a Front End <br>Web Developer <br>in Georgia.
+        <h2>Hi! <br> I'm a Front <br> End Web Developer <br> in Georgia.
         </h2>
       </div>
     </div>
@@ -163,24 +163,28 @@
     <footer>
       <div class="footer-content-wrapper">
         <section class="contact-me">
-          <h3>Contact Me:</h3>
-          <p>hamaggie25@gmail.com</p>
+          <h3>Let's have a chat!</h3>
           <p>678-953-0470</p>
-          <p>
-            <a href="https://github.com/maggie-mcdonald" target="_blank"><i class="fa-brands fa-github"></i></a>
-          </p>
-          <p>
-            <a href="https://www.linkedin.com/in/maggie-mcdonald/" target="_blank"><i
-                class="fa-brands fa-linkedin"></i></a>
-          </p>
+          <a href="mailto:hamaggie25@gmail.com">hamaggie25@gmail.com</a>
+
+          <div class="social-icons">
+            <p>
+              <a href="https://github.com/maggie-mcdonald" target="_blank"><i class="fa-brands fa-github"></i></a>
+            </p>
+            <p>
+              <a href="https://linkedin.com/in/maggie-mcdonald-3049a3217/" target="_blank"><i
+                  class="fa-brands fa-linkedin"></i></a>
+            </p>
+          </div>
+
         </section>
 
         <div class="footnote">
-          <p>Portfolio 2023 | Maggie McDonald</p>
+          <p>Portfolio 2023 | Maggie McDonald </p>
         </div>
-
+      </div>
     </footer>
-    </div>
+
   </main>
 
 
