Additional CSS styling and responsiveness

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="hero-content-wrapper">
         <div class="half-content">
           <h2 class="hero-text">
-            Hi!<span> I'm Maggie</span> and I'm a Front End Web Developer in Georgia who specializes in writing clean
+            Hi! <i>I'm Maggie</i> and I'm a Front End Web Developer in Georgia who specializes in writing clean
             and responsive code.
           </h2>
         </div>
