Additional CSS styling for uniformity

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <!-- Scroll to Top Button -->
   <button onclick="topFunction()" id="scroll-button" title="Scroll to Top">
-    <i class="fa-solid fa-arrow-up"></i>  
+    <i class="fa-solid fa-arrow-up"></i>
   </button>
 
   <header>
@@ -66,33 +66,33 @@
     <div id="hero">
       <div class="hero-content-wrapper">
         <div class="half-content">
-          <h2 class="hero-text">
-            Hi! <i>I'm Maggie</i> and I'm a Front End Web Developer in Georgia who specializes in writing clean
-            and responsive code.
-          </h2>
-        </div>
-        <div class="half-content">
           <figure>
             <a href="#"><img src="img\profile-pic.png" alt="maggie"></a>
           </figure>
+        </div>
+        <div class="half-content">
+          <h2 class="hero-text">
+            Hi! <em>I'm Maggie</em> and I'm a Front End Web Developer in Georgia who specializes in writing clean
+            and responsive code.
+          </h2>
         </div>
       </div>
       <!--Skill Section-->
       <section id="skills">
         <div class="skills-section">
           <div class="half-content">
-            <p class="skills-list">
+            <h2 class="hero-text">
               <span>Skills:</span><br>
               HTML5 | CSS3 | JavaScript | React.js | Flexbox & CSS Grid | JSX | ES6 | Git |
               Version Control | APIs | Managing data flow | Media queries | Responsive typography
-            </p>
+              </p>
           </div>
         </div>
         <div class="half-content">
-          <p class="skills-list">
+          <h2 class="hero-text">
             <span>Tools:</span><br>
             Visual Studio Code | Code Sandbox | Chrome DevTools | Github | Photoshop
-          </p>
+            </p>
         </div>
       </section>
     </div>
@@ -112,7 +112,6 @@
           <button onclick=`window.location.href="https://maggie-mcdonald.github.io/guess-the-word/" ;`>Live
             Site</button>
           <button>Github Repo</button>
-          <hr>
         </div>
       </div>
 
@@ -128,7 +127,6 @@
           <p class="skills"><em>Skills: React.JS, JSX, CSS3, Lifecycle Methods</em></p>
           <button>Live Site</button>
           <button>Github Repo</button> <!--would like to use github icon-->
-          <hr>
         </div>
       </div>
 
@@ -151,17 +149,19 @@
 
     <section class="about">
       <div class="about-me-content-wrapper">
+        <!--
         <div class="logo">
-          <!--logo img goes here-->
+          logo 
         </div>
+-->
         <div class="about">
           <h3>About Me:</h3>
-          <p>Hi there! I'm Maggie and I love development because I have an eternal quest of learning how to make things
+          <p class="info">Hi there! I'm Maggie and I love development because I have an eternal quest of learning how to make things
             work efficiently with responsiveness and accessibility in mind! As a former Special Educator, I excel in
             managing chaos and complex problem solving with a positive attitude.
 
             If I’m not coding or spending time with my husband, daughter and three golden retrievers, you can find me
-            trying to figure out how to renovate something else in our family’s home.
+            trying to figure out how to renovate something else in our family’s home!
 
             I'd love to take my next <span>click</span> into the coding world with you!</p>
         </div>
@@ -175,10 +175,10 @@
           <p class="footer-p">678-953-0470</p>
           <a href="mailto:hamaggie25@gmail.com">hamaggie25@gmail.com</a>
           <div class="social-icons">
-            <p>
+            <p class="size-icon">
               <a href="https://github.com/maggie-mcdonald" target="_blank"><i class="fa-brands fa-github"></i></a>
             </p>
-            <p>
+            <p class="size-icon">
               <a href="https://linkedin.com/in/maggie-mcdonald-3049a3217/" target="_blank"><i
                   class="fa-brands fa-linkedin"></i></a>
             </p>
@@ -192,4 +192,5 @@
     </footer>
   </main>
 </body>
+
 </html>
