--- a/index.html
+++ b/index.html
@@ -102,17 +102,20 @@
       <div class="project-container">
         <h3>Project: Guess The Word Game</h3>
         <div class="live-version">
+          <iframe class="responsive-iframe" src="https://maggie-mcdonald.github.io/guess-the-word/"
+            title="Guess The Word Game">
+          </iframe>
           <a href="#"><img src="img/guess-the-word.png" alt="guess-the-word-game"></a>
-          <!--this is where I would like to place a live version of the repo-->
+          <!--live version-->
         </div>
         <div class="project-info">
           <p class="description"> An interactive Vanilla JavaScript game where the player must guess the word one
             letter
             at a time with a total of 8 guesses.</p>
           <p class="skills"><em>Skills: JS, Responsive Design, DOM Manipulation, Loops, APIs</em></p>
-          <button onclick="window.location.href=`https://maggie-mcdonald.github.io/guess-the-word/`;">Live
+          <button onclick="window.open(`https://maggie-mcdonald.github.io/guess-the-word/`);">Live
             Site</button>
-          <button onclick="window.location.href=`https://github.com/maggie-mcdonald/guess-the-word`;">Github
+          <button onclick="window.open(`https://github.com/maggie-mcdonald/guess-the-word`);">Github
             Repo</button>
         </div>
       </div>
@@ -120,16 +123,22 @@
       <div class="project-container">
         <h3>Project: Super Sticky Notes</h3>
         <div class="live-version">
+          <!--live version-->
+          <iframe class="responsive-iframe"
+            src="https://codesandbox.io/embed/l12-build-your-big-component-help-forked-cjzrq0?fontsize=14&hidenavigation=1&theme=dark"
+            style="width:100%; height: 100%; border:0; border-radius: 4px; overflow:hidden;"
+            title="L12 - Build Your Big Component - Help (forked)"
+            allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
+            sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
           <a href="#"><img src="img/sitcky-note-app.png" alt="sticky-note-app"></a>
-          <!--this is where I would like to place a live version of the repo-->
         </div>
         <div class="project-info">
           <p class="description"> A React app that allows for creation, deletion, editing and searching of sticky notes
             that are saved to local storage.</p>
           <p class="skills"><em>Skills: React.JS, JSX, CSS3, Lifecycle Methods</em></p>
-          <button onclick="window.location.href=`https://cjzrq0.csb.app/`;">Live Site</button>
+          <button onclick="window.open(`https://cjzrq0.csb.app/`);">Live Site</button>
           <button
-            onclick="window.location.href=`https://codesandbox.io/s/l12-build-your-big-component-help-forked-cjzrq0`;">Code
+            onclick="window.open(`https://codesandbox.io/s/l12-build-your-big-component-help-forked-cjzrq0`);">Code
             Sandbox</button>
         </div>
       </div>
@@ -139,15 +148,18 @@
         <h3>Project: Github Repo Gallery</h3>
         <div class="live-version">
           <a href="#"><img src="img/github-repo-gallery.png" alt="github-repo-gallery"></a>
-          <!--this is where I would like to place a live version of the repo-->
+          <!--live version of the repo-->
+          <iframe class="responsive-iframe" src="https://maggie-mcdonald.github.io/github-repo-gallery/"
+            title="Github Repo Gallery">
+          </iframe>
         </div>
         <div class="project-info">
           <p class="description">A responsive API gallery of my current repos on Github. Repos are easy to find with an
             eliminating search feature and easy navigation with multiple buttons.</p>
           <p class="skills"><em>Skills: JS, APIs, Dom Manipulation, Loops</em></p>
-          <button onclick="window.location.href=`https://maggie-mcdonald.github.io/github-repo-gallery/`;">Live
+          <button onclick="window.open(`https://maggie-mcdonald.github.io/github-repo-gallery/`);">Live
             Site</button>
-          <button onclick="window.location.href=`https://github.com/maggie-mcdonald/github-repo-gallery`;">Github
+          <button onclick="window.open(`https://github.com/maggie-mcdonald/github-repo-gallery`);">Github
             Repo</button>
         </div>
       </div>
@@ -185,22 +197,22 @@
       <div class="footer-content-wrapper">
         <section id="contact">
           <h3>Let's have a chat!</h3>
-          <div class="social-icons"></div>
-          <p class="social-icons">
-<!--figure out this friggin button-->
-            <button id="phone" onclick={PopUp}><i
-                class="fa-solid fa-mobile-screen"></a></i></button>
+          <div class="social-icons">
+            <p class="size-icon">
+              <!--figure out this friggin button-->
+              <button id="phone" onclick={PopUp}><i class="fa-solid fa-mobile-screen"></a></i></button>
 
-          </p>
-          <p class="size-icon"><a href="mailto:hamaggie25@gmail.com"><i class="fa-sharp fa-solid fa-envelope"></i></a>
-          </p>
-          <p class="size-icon">
-            <a href="https://github.com/maggie-mcdonald" target="_blank"><i class="fa-brands fa-github"></i></a>
-          </p>
-          <p class="size-icon">
-            <a href="https://linkedin.com/in/maggie-mcdonald-3049a3217/" target="_blank"><i
-                class="fa-brands fa-linkedin"></i></a>
-          </p>
+            </p>
+            <p class="size-icon"><a href="mailto:hamaggie25@gmail.com"><i class="fa-sharp fa-solid fa-envelope"></i></a>
+            </p>
+            <p class="size-icon">
+              <a href="https://github.com/maggie-mcdonald" target="_blank"><i class="fa-brands fa-github"></i></a>
+            </p>
+            <p class="size-icon">
+              <a href="https://linkedin.com/in/maggie-mcdonald-3049a3217/" target="_blank"><i
+                  class="fa-brands fa-linkedin"></i></a>
+            </p>
+          </div>
       </div>
       </section>
 
