Added resume and addressed some contrast issues

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<html lang="en">
 <html class="no-js" lang="">
 
 <head>
@@ -51,7 +52,7 @@
         <!-- Navigation links (hidden by default) -->
         <div id="myLinks">
           <!--put your resume here Maggie-->
-          <a href="" target="_blank">Resume</a>
+          <a href="https://drive.google.com/file/d/1GIkAlBbaVSO67CsWN6ZoT0h4d39jsdsA/view?usp=sharing" target="_blank">Resume</a>
           <a href="#about">About</a>
           <a href="#skills">Skills</a>
           <a href="#projects">Projects</a>
@@ -129,7 +130,7 @@
             style="width:100%; height: 100%; border:0; border-radius: 4px; overflow:hidden;"
             title="L12 - Build Your Big Component - Help (forked)"
             allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
-            sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
+            sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" alt="sticky-note-app"></iframe>
           <a href="#"><img src="img/sitcky-note-app.png" alt="sticky-note-app"></a>
         </div>
         <div class="project-info">
@@ -150,7 +151,7 @@
           <a href="#"><img src="img/github-repo-gallery.png" alt="github-repo-gallery"></a>
           <!--live version of the repo-->
           <iframe class="responsive-iframe" src="https://maggie-mcdonald.github.io/github-repo-gallery/"
-            title="Github Repo Gallery">
+            title="Github Repo Gallery" alt="github-repo-gallery">
           </iframe>
         </div>
         <div class="project-info">
