--- a/index.html
+++ b/index.html
@@ -201,16 +201,15 @@
           <div class="social-icons">
             <p class="size-icon">
               <!--figure out this friggin button-->
-              <button id="phone" onclick={PopUp}><i class="fa-solid fa-mobile-screen"></a></i></button>
-
+              <button id="phone" onclick={PopUp} title="Send Maggie a text"><i class="fa-solid fa-mobile-screen"></a></i></button>
             </p>
-            <p class="size-icon"><a href="mailto:hamaggie25@gmail.com"><i class="fa-sharp fa-solid fa-envelope"></i></a>
-            </p>
-            <p class="size-icon">
-              <a href="https://github.com/maggie-mcdonald" target="_blank"><i class="fa-brands fa-github"></i></a>
+            <p class="size-icon"><a href="mailto:hamaggie25@gmail.com" title="Email Maggie"><i class="fa-sharp fa-solid fa-envelope"></i></a>
             </p>
             <p class="size-icon">
-              <a href="https://linkedin.com/in/maggie-mcdonald-3049a3217/" target="_blank"><i
+              <a href="https://github.com/maggie-mcdonald" target="_blank" title="Maggie's Github profile"><i class="fa-brands fa-github"></i></a>
+            </p>
+            <p class="size-icon">
+              <a href="https://linkedin.com/in/maggie-mcdonald-3049a3217/" target="_blank" title="Maggie's Linkedin profile"><i
                   class="fa-brands fa-linkedin"></i></a>
             </p>
           </div>
