--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-<html class="no-js" lang="">
 
 <head>
   <meta charset="utf-8">
@@ -22,8 +21,6 @@
   <link rel="stylesheet" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
-
-
 </head>
 
 <body>
@@ -36,7 +33,6 @@
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
-  <script src="popup/node_sms/index.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
@@ -46,30 +42,30 @@
   <script src="https://www.google-analytics.com/analytics.js" async></script>
 
   <header>
-    <section id="head">
-      <h1>Maggie McDonald</h1>
-      <div class="topnav">
-        <!-- Navigation links (hidden by default) -->
-        <div id="myLinks">
-          <!--put your resume here Maggie-->
-          <a href="https://drive.google.com/file/d/1GIkAlBbaVSO67CsWN6ZoT0h4d39jsdsA/view?usp=sharing" target="_blank">Resume</a>
-          <a href="#about">About</a>
-          <a href="#skills">Skills</a>
-          <a href="#projects">Projects</a>
-          <a href="#contact">Contact</a>
-        </div>
-        <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
+    <h1>Maggie McDonald</h1>
+    <div class="topnav">
+      <!-- Navigation links (hidden by default) -->
+      <div id="myLinks">
+        <!--put your resume here Maggie-->
+        <a href="https://drive.google.com/file/d/1eWSoo2rU5TxnEJtU7P67NKTZ4n8mGt8A/view?usp=sharing"
+          target="_blank">Resume</a>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
       </div>
+      <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
   </header>
   <main>
     <div id="hero">
       <div class="hero-content-wrapper">
         <div class="half-content">
           <figure>
-            <a href="#"><img src="img\profile-pic.png" alt="maggie"></a>
+            <a href="#"><img src="img/profile-pic.png" alt="maggie"></a>
           </figure>
         </div>
         <div class="half-content">
@@ -79,6 +75,7 @@
           </h2>
         </div>
       </div>
+
       <!--Skill Section-->
       <section id="skills">
         <div class="skills-section">
@@ -87,14 +84,16 @@
               Skills:<br>
               <span>HTML5 | CSS3 | JavaScript | React.js | Flexbox & CSS Grid | JSX | ES6 | Git |
                 Version Control | APIs | Managing data flow | Media queries | Responsive typography
-              </span></p>
+              </span>
+            </h2>
           </div>
         </div>
         <div class="half-content">
           <h2 class="hero-text">
             Tools:<br>
             <span>Visual Studio Code | Code Sandbox | Chrome DevTools | Github | Photoshop
-            </span></p>
+            </span>
+          </h2>
         </div>
       </section>
     </div>
@@ -106,7 +105,7 @@
           <iframe class="responsive-iframe" src="https://maggie-mcdonald.github.io/guess-the-word/"
             title="Guess The Word Game">
           </iframe>
-          <a href="#"><img src="img/guess-the-word.png" alt="guess-the-word-game"></a>
+          <a href="#"><img src="img/guess-the-word.png" title="Guess the Word Game"></a>
           <!--live version-->
         </div>
         <div class="project-info">
@@ -130,11 +129,12 @@
             style="width:100%; height: 100%; border:0; border-radius: 4px; overflow:hidden;"
             title="L12 - Build Your Big Component - Help (forked)"
             allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
-            sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts" alt="sticky-note-app"></iframe>
-          <a href="#"><img src="img/sitcky-note-app.png" alt="sticky-note-app"></a>
+            sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"></iframe>
+          <a href="#"><img src="img/sitcky-note-app.png" title="Super Sticky Notes App"></a>
         </div>
         <div class="project-info">
-          <p class="description"> A React app that allows for creation, deletion, editing and searching of sticky notes
+          <p class="description"> A React app that allows for creation, deletion, editing and searching of sticky
+            notes
             that are saved to local storage.</p>
           <p class="skills"><em>Skills: React.JS, JSX, CSS3, Lifecycle Methods</em></p>
           <button onclick="window.open(`https://cjzrq0.csb.app/`);">Live Site</button>
@@ -148,14 +148,15 @@
       <div class="project-container">
         <h3>Project: Github Repo Gallery</h3>
         <div class="live-version">
-          <a href="#"><img src="img/github-repo-gallery.png" alt="github-repo-gallery"></a>
+          <a href="#"><img src="img/github-repo-gallery.png" title="Github Repo Gallery"></a>
           <!--live version of the repo-->
           <iframe class="responsive-iframe" src="https://maggie-mcdonald.github.io/github-repo-gallery/"
-            title="Github Repo Gallery" alt="github-repo-gallery">
+            title="Github Repo Gallery">
           </iframe>
         </div>
         <div class="project-info">
-          <p class="description">A responsive API gallery of my current repos on Github. Repos are easy to find with an
+          <p class="description">A responsive API gallery of my current repos on Github. Repos are easy to find with
+            an
             eliminating search feature and easy navigation with multiple buttons.</p>
           <p class="skills"><em>Skills: JS, APIs, Dom Manipulation, Loops</em></p>
           <button onclick="window.open(`https://maggie-mcdonald.github.io/github-repo-gallery/`);">Live
@@ -180,10 +181,12 @@
               <p class="info">Hi there! I'm Maggie and I love development because I have an eternal quest of learning
                 how to
                 make things
-                work efficiently with responsiveness and accessibility in mind! As a former Special Educator, I excel in
+                work efficiently with responsiveness and accessibility in mind! As a former Special Educator, I excel
+                in
                 managing chaos and complex problem solving with a positive attitude.
 
-                I’m either coding, spending time with my husband, daughter and three golden retrievers, or you can find
+                I’m either coding, spending time with my husband, daughter and three golden retrievers, or you can
+                find
                 me
                 trying to figure out how to renovate something else in our family’s home!
 
@@ -199,26 +202,22 @@
         <section id="contact">
           <h3>Let's have a chat!</h3>
           <div class="social-icons">
-            <p class="size-icon">
-              <!--figure out this friggin button-->
-              <button id="phone" onclick={PopUp} title="Send Maggie a text"><i class="fa-solid fa-mobile-screen"></a></i></button>
-            </p>
-            <p class="size-icon"><a href="mailto:hamaggie25@gmail.com" title="Email Maggie"><i class="fa-sharp fa-solid fa-envelope"></i></a>
+            <p class="size-icon"><a href="mailto:hamaggie25@gmail.com" title="Email Maggie"><i
+                  class="fa-sharp fa-solid fa-envelope"></i></a>
             </p>
             <p class="size-icon">
-              <a href="https://github.com/maggie-mcdonald" target="_blank" title="Maggie's Github profile"><i class="fa-brands fa-github"></i></a>
+              <a href="https://github.com/maggie-mcdonald" target="_blank" title="Maggie's Github profile"><i
+                  class="fa-brands fa-github"></i></a>
             </p>
             <p class="size-icon">
-              <a href="https://linkedin.com/in/maggie-mcdonald-3049a3217/" target="_blank" title="Maggie's Linkedin profile"><i
-                  class="fa-brands fa-linkedin"></i></a>
+              <a href="https://linkedin.com/in/maggie-mcdonald-3049a3217/" target="_blank"
+                title="Maggie's Linkedin profile"><i class="fa-brands fa-linkedin"></i></a>
             </p>
           </div>
+        </section>
       </div>
-      </section>
-
       <div class="footnote">
-        <p>Portfolio 2023 | Maggie McDonald </p>
-      </div>
+        <p>Portfolio 2023 | Maggie McDonald</p>
       </div>
     </footer>
   </main>
